tests/dataset/job/compiler/c/q26.error
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c: In function ‘test_Q26_finds_hero_movies_with_rating_above_7’:
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:413:72: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  413 |   if (test_Q26_finds_hero_movies_with_rating_above_7_result.len != tmp1.len) {
      |                                                                        ^
      |                                                                        ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:419:15: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  419 |           tmp1.data[i3]) {
      |               ^
      |               ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:484:7: error: conflicting types for ‘allowed_keywords’; have ‘int’
  484 |   int allowed_keywords = allowed_keywords;
      |       ^~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:473:15: note: previous definition of ‘allowed_keywords’ with type ‘list_string’
  473 |   list_string allowed_keywords = list_string_create(10);
      |               ^~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:485:27: warning: implicit declaration of function ‘rows_item_list_t_create’ [-Wimplicit-function-declaration]
  485 |   rows_item_list_t tmp4 = rows_item_list_t_create(
      |                           ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:486:20: error: ‘(complete_cast_t *)&complete_cast’ is a pointer; did you mean to use ‘->’?
  486 |       complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                    ^
      |                    ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:486:41: error: ‘(comp_cast_type_t *)&comp_cast_type’ is a pointer; did you mean to use ‘->’?
  486 |       complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:486:62: error: ‘(comp_cast_type_t *)&comp_cast_type’ is a pointer; did you mean to use ‘->’?
  486 |       complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                                                              ^
      |                                                              ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:487:16: error: ‘(cast_info_t *)&cast_info’ is a pointer; did you mean to use ‘->’?
  487 |       cast_info.len * char_name.len * name.len * title.len * kind_type.len *
      |                ^
      |                ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:487:32: error: ‘(char_name_t *)&char_name’ is a pointer; did you mean to use ‘->’?
  487 |       cast_info.len * char_name.len * name.len * title.len * kind_type.len *
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:487:43: error: ‘(name_t *)&name’ is a pointer; did you mean to use ‘->’?
  487 |       cast_info.len * char_name.len * name.len * title.len * kind_type.len *
      |                                           ^
      |                                           ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:487:55: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  487 |       cast_info.len * char_name.len * name.len * title.len * kind_type.len *
      |                                                       ^
      |                                                       ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:487:71: error: ‘(kind_type_t *)&kind_type’ is a pointer; did you mean to use ‘->’?
  487 |       cast_info.len * char_name.len * name.len * title.len * kind_type.len *
      |                                                                       ^
      |                                                                       ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:488:20: error: ‘(movie_keyword_t *)&movie_keyword’ is a pointer; did you mean to use ‘->’?
  488 |       movie_keyword.len * keyword.len * movie_info_idx.len * info_type.len);
      |                    ^
      |                    ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:488:34: error: ‘(keyword_t *)&keyword’ is a pointer; did you mean to use ‘->’?
  488 |       movie_keyword.len * keyword.len * movie_info_idx.len * info_type.len);
      |                                  ^
      |                                  ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:488:55: error: ‘(movie_info_idx_t *)&movie_info_idx’ is a pointer; did you mean to use ‘->’?
  488 |       movie_keyword.len * keyword.len * movie_info_idx.len * info_type.len);
      |                                                       ^
      |                                                       ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:488:71: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  488 |       movie_keyword.len * keyword.len * movie_info_idx.len * info_type.len);
      |                                                                       ^
      |                                                                       ->
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:548:53: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  548 |                                 contains_string(cct2.kind, "complete") &&
      |                                                 ~~~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:86:34: note: expected ‘char *’ but argument is of type ‘const char *’
   86 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:550:53: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  550 |                                 (contains_string(chn.name, "man") ||
      |                                                  ~~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:86:34: note: expected ‘char *’ but argument is of type ‘const char *’
   86 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:551:53: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  551 |                                  contains_string(chn.name, "Man")) &&
      |                                                  ~~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:86:34: note: expected ‘char *’ but argument is of type ‘const char *’
   86 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:554:56: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  554 |                                                       k.keyword)) &&
      |                                                       ~^~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:80:54: note: expected ‘char *’ but argument is of type ‘const char *’
   80 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:578:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  578 |   int tmp18 = int_create(rows.len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:582:10: error: request for member ‘data’ in something not a structure or union
  582 |     tmp18.data[tmp19] = r.character;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:585:8: error: request for member ‘len’ in something not a structure or union
  585 |   tmp18.len = tmp19;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:598:10: error: request for member ‘data’ in something not a structure or union
  598 |     tmp24.data[tmp25] = r.actor;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:601:8: error: request for member ‘len’ in something not a structure or union
  601 |   tmp24.len = tmp25;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:606:10: error: request for member ‘data’ in something not a structure or union
  606 |     tmp27.data[tmp28] = r.movie;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:609:8: error: request for member ‘len’ in something not a structure or union
  609 |   tmp27.len = tmp28;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:610:65: error: incompatible type for argument 1 of ‘_min_string’
  610 |   result_t result[] = {(result_t){.character_name = _min_string(tmp18),
      |                                                                 ^~~~~
      |                                                                 |
      |                                                                 int
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:71:38: note: expected ‘list_string’ but argument is of type ‘int’
   71 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:612:64: error: incompatible type for argument 1 of ‘_min_string’
  612 |                                   .playing_actor = _min_string(tmp24),
      |                                                                ^~~~~
      |                                                                |
      |                                                                int
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:71:38: note: expected ‘list_string’ but argument is of type ‘int’
   71 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:613:70: error: incompatible type for argument 1 of ‘_min_string’
  613 |                                   .complete_hero_movie = _min_string(tmp27)}};
      |                                                                      ^~~~~
      |                                                                      |
      |                                                                      int
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:71:38: note: expected ‘list_string’ but argument is of type ‘int’
   71 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:623:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  623 |     _json_string(it.character_name);
      |                  ~~^~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:91:32: note: expected ‘char *’ but argument is of type ‘const char *’
   91 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:631:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  631 |     _json_string(it.playing_actor);
      |                  ~~^~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:91:32: note: expected ‘char *’ but argument is of type ‘const char *’
   91 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:635:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  635 |     _json_string(it.complete_hero_movie);
      |                  ~~^~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:91:32: note: expected ‘char *’ but argument is of type ‘const char *’
   91 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:639:59: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  639 |   test_Q26_finds_hero_movies_with_rating_above_7_result = result;
      |                                                           ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:641:13: error: request for member ‘data’ in something not a structure or union
  641 |   free(tmp18.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:643:13: error: request for member ‘data’ in something not a structure or union
  643 |   free(tmp24.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq261344245714/001/prog.c:644:13: error: request for member ‘data’ in something not a structure or union
  644 |   free(tmp27.data);
      |             ^
